--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -12,6 +12,7 @@
 <body>
   <nav class="navbar top">
     <a class="navbar-brand" href="/"><img src="/assets/img/bmail.svg" alt="Logo"></a>
+    <h4>Pozdravljen {{current_user.name}}!</h4>
     <div class="dropdown">
       <a href="" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="far fa-user-circle"></i></a>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
