--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -58,6 +58,7 @@
           <a href="/">Sporočila</a>
           <a href="/sent_messages">Poslano</a>
           <a href="/received_messages">Prejeto</a>
+          <a href="/users">Uporabniki</a>
           <a href="/deleted_messages"><i class="far fa-trash-alt"></i></a>
         </nav>
       </div>
