--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -24,7 +24,7 @@
   </nav>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-2 side-nav">
+      <div class="col-lg-2 col-sm-12 side-nav">
         <a class="badge badge-primary mt-3 mb-2" href="#" data-toggle="modal" data-target="#exampleModal">Novo sporočilo</a>
 
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
