--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,88 @@
 .dropdown-menu {
   left: -150px;
 }
+@media screen and (max-width: 320px) {
+  h4 {
+    padding-top: 10px;
+    font-size: 13px;
+  }
+  h5, h6, p {
+    font-size: 15px;
+  }
+  .dropdown {
+    padding-left: 43%;
+    padding-top: 10px;
+  }
+  .dropdown-menu {
+    left: 0;
+  }
+  .float-right {
+    float: left !important;
+  }
+  small {
+    padding-top: 5px;
+  }
+}
+
+@media screen and (min-width: 360px) and (max-width: 360px){
+  h4 {
+    padding-top: 10px;
+    font-size: 15px;
+  }
+  h5, h6, p {
+    font-size: 16px;
+  }
+  .dropdown {
+    padding-left: 45%;
+    padding-top: 10px;
+  }
+  .dropdown-menu {
+    left: 0;
+  }
+  .float-right {
+    float: left !important;
+  }
+  small {
+    padding-top: 5px;
+  }
+}
+
+@media screen and (min-width: 375px) and (max-width: 384px){
+  h4 {
+    padding-top: 10px;
+    font-size: 15px;
+  }
+  h5, h6, p {
+    font-size: 16px;
+  }
+  .dropdown {
+    padding-left: 45%;
+    padding-top: 10px;
+  }
+  .dropdown-menu {
+    left: 0;
+  }
+  small {
+    padding-top: 3px;
+  }
+}
+
+@media screen and (min-width: 411px) and (max-width: 432px){
+  h4 {
+    padding-top: 10px;
+    font-size: 13px;
+  }
+  h5, h6, p {
+    font-size: 15px;
+  }
+  .dropdown {
+    padding-left: 45%;
+    padding-top: 10px;
+  }
+  .dropdown-menu {
+    left: 0;
+  }
+  small {
+    padding-top: 5px;
+  }
+}
